--- a/svg_trabalho1.html
+++ b/svg_trabalho1.html
@@ -28,7 +28,7 @@
 
 <path id="cobra_lateral_ovo_azul" d="M 347,450 L 450,350 L 370,360 L343,450 " style="fill:#0A3255"" />
 
-<ellipse id="bastão_lower_elipse_black" cx="580" cy="535" rx="30" ry="33" style="fill:#000005" />
+                                                                                                   <ellipse id="bastão_lower_elipse_black" cx="580" cy="535" rx="40" ry="33" style="fill:#000005" />
 
 <path id="bastão_lower_triangle" d="M 560,530 L 600,530 L590, 300 L570, 300 L 560,530 " style="fill:#D94625" />
 
@@ -40,22 +40,23 @@
 
 <ellipse id="cobra_3_elipse" cx="577" cy="330" rx="43" ry="37" style="fill:#59122C" />
 
+<path id="cauda_bastao_right" d="M 620,325 Q 620,200 550,275" style="fill:#59122C" />
+
 <ellipse id="bastão_upper_elipse_orange" cx="580" cy="316" rx="14" ry="13" style="fill:#D94625" />
 
 <path id="bastão_upper_triangle" d="M 568,311 L592,311 L582,90 L578,90 L 568,310 " style="fill:#D94625" />
 
+<path id="cauda_left_down" d="M 569,290 Q 520,275 510,290 L 510,275 L569,290" style="fill:#59122C" />
 
+<path id="cauda_left_up" d="M 571,250 Q 520,250 520,280 L 569,291 L571,250 " style="fill:#59122C" />
 
+<path id="cauda_left_2_circles" d="M 540,254 C 520,260 480,280 475,240 L 465,234 C 450,290 510,310 513,284 L512,290 L540,254" style="fill:#59122C" />
 
+<path id="cauda_left_final" d="M 477,242 C 490,220 490,180 420,200 C450,220 470,215 464,235" style="fill:#59122C" />
 
-
-
-  
-  
 </svg>
 
 </body>
 </html>
-
 
 
