--- a/svg_trabalho1.html
+++ b/svg_trabalho1.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title> Urutu </title>
+</head> 
+  
 <body>
-
-  <h1>A inspiração</h1>
-    <p> Do quadro "Passagem de Nível II, feito por Tarsila do Amaral em 1965, que trazia a ideia de geometrização dos cubistas franceses para a arte brasileira, surgiu a ideia de adicionar elementos interativos </p>
-
-
-<svg width="725" height="605">
+ <h1>A inspiração</h1>
+  
+  <p> Do quadro "Urutu", também conhecido como "O Ovo", feito por Tarsila do Amaral em 1928, surgiu a ideia de trabalhar em SVG com curvas de Bézier, explorando a curvilinidade da pintura, foquei em dois tipos de curvas principalmente, as do tipo "C" e do tipo "Q", além de elipses e círculos.</p>
+	
+	<p> Apesar de "O Abapuru" ser mais conhecido para representar o movimento da Antropofagia, a obra escolhida também apresenta uma luta entre deglutição e vida, onde não se sabe quem saiu vencedor.</p>
+	
+	<p> A obra não é composta por cores sólidas, o que torna mais complicado seu manejo, bem como sombras e luminosidades presentes ao redor das figuras em destaque. </p>
+  
+  <svg width="725" height="605">
 
 <rect id="fundo" x="0"	y="0"	width ="725" height="605" style="fill:#0A3255"/>
 
