--- a/svg_trabalho1.html
+++ b/svg_trabalho1.html
@@ -5,15 +5,30 @@
     <title> Urutu </title>
 </head> 
   
-<body>
- <h1>A inspiração</h1>
+<body style="margin-left:35px; margin-right:20px;">
+ <h1 style="text-align:center;">Urutu</h1>
+ 
+ <h2> A inspiração </h2>
   
   <p> Do quadro "Urutu", também conhecido como "O Ovo", feito por Tarsila do Amaral em 1928, surgiu a ideia de trabalhar em SVG com curvas de Bézier, explorando a curvilinidade da pintura, foquei em dois tipos de curvas principalmente, as do tipo "C" e do tipo "Q", além de elipses e círculos.</p>
 	
 	<p> Apesar de "O Abapuru" ser mais conhecido para representar o movimento da Antropofagia, a obra escolhida também apresenta uma luta entre deglutição e vida, onde não se sabe quem saiu vencedor.</p>
 	
 	<p> A obra não é composta por cores sólidas, o que torna mais complicado seu manejo, bem como sombras e luminosidades presentes ao redor das figuras em destaque. </p>
-  
+	
+<h2> Os desafios </h2>
+
+	<p> Além das cores, a mudança de direção da cauda - ou seria da cabeça? - muitas vezes brusca dificulta acertar as extremidades das curvas e impossibilita um movimento tão fluido quanto o da artista.</p>
+	
+<h2> O processo de criação</h2>
+	<ul> 
+	<li>As cores foram especificadas usando Adobe Color </li>
+	<li> A composição da imagem, tentando manter certa proporcionalidade foi feita usando régua mesmo </li>
+	<li> As dimensões foram mantidas proporcionais às originais a fim de evitar maiores distorções da obra </li>
+	<li> Usei o site <a href="https://svg-path-visualizer.netlify.app/">SVG Path Visualizer</a> para visualizar melhor as curvas separadamente </li>
+	</ul>
+	
+	
   <svg width="725" height="605">
 
 <rect id="fundo" x="0"	y="0"	width ="725" height="605" style="fill:#0A3255"/>
