--- a/svg_trabalho1.html
+++ b/svg_trabalho1.html
@@ -28,7 +28,7 @@
 	<li> Usei o site <a href="https://svg-path-visualizer.netlify.app/">SVG Path Visualizer</a> para visualizar melhor as curvas separadamente </li>
 	</ul>
 	
-	
+  <div  style=" display: flex; justify-content: center;">
   <svg width="725" height="605">
 
 <rect id="fundo" x="0"	y="0"	width ="725" height="605" style="fill:#0A3255"/>
@@ -78,7 +78,7 @@
 <path id="cauda_left_final" d="M 477,242 C 490,220 490,180 420,200 C450,220 470,215 464,235" style="fill:#59122C" />
 
   </svg>
-
+  </div>
 </body>
 </html>
 
