--- a/svg_trabalho1.html
+++ b/svg_trabalho1.html
@@ -5,7 +5,7 @@
     <title> Urutu </title>
 </head> 
   
-<body style="margin-left:50px; margin-right:50px;">
+<body style="margin-left:100px; margin-right:100px;">
  <h1 style="text-align:center;">Urutu</h1>
  
  <h2> A inspiração </h2>
@@ -14,11 +14,13 @@
 	
 	<p> Apesar de "O Abapuru" ser mais conhecido para representar o movimento da Antropofagia, a obra escolhida também apresenta uma luta entre deglutição e vida, onde não se sabe quem saiu vencedor.</p>
 	
-	<p> A obra não é composta por cores sólidas, o que torna mais complicado seu manejo, bem como sombras e luminosidades presentes ao redor das figuras em destaque. </p>
+	<img src="https://static.todamateria.com.br/upload/19/28/1928oovourutu.jpg" alt="Urutu" style="display: block;  margin-left: auto; margin-right: auto; width: 35%">
 	
 <h2> Os desafios </h2>
 
-	<p> Além das cores, a mudança de direção da cauda - ou seria da cabeça? - muitas vezes brusca dificulta acertar as extremidades das curvas e impossibilita um movimento tão fluido quanto o da artista. Ademais, muitas tentativas sem sucesso de usar o blur causaram estresse. </p>
+	<p> Além das cores, a mudança de direção da cauda - ou seria da cabeça? - muitas vezes brusca dificulta acertar as extremidades das curvas e impossibilita um movimento tão fluido quanto o da artista. </p>
+	
+	<p> A obra não é composta por cores sólidas, o que torna mais complicado seu manejo, bem como sombras e luminosidades presentes ao redor das figuras em destaque. Ademais, muitas tentativas sem sucesso de usar o blur causaram estresse. </p>
 	
 <h2> O processo de criação</h2>
 	<ul> 
