--- a/svg_trabalho1.html
+++ b/svg_trabalho1.html
@@ -30,6 +30,8 @@
 	<li> Usei o site <a href="https://svg-path-visualizer.netlify.app/">SVG Path Visualizer</a> para visualizar melhor as curvas separadamente </li>
 	<li> Para as sombras/luz usei <code>linearGradient</code> e <code>radialGradient </code> </li>
 	<li> Tentei o efeito <code> blur, </code> mas não funcionou </li>
+	<li> Para as animações, utilizei o animate</li>
+	</br>
 	</ul>
 	
 <div style=" display: flex;
@@ -198,5 +200,6 @@
 </path>
   </svg>
 </div>
+</br>
 </body>
 </html>
