--- a/Trabalho1/Urutu.html
+++ b/Trabalho1/Urutu.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title> Urutu </title>
 </head> 
   
-<body style="margin-left:100px; margin-right:100px;">
- <h1 style="text-align:center;">Urutu</h1>
+<body>
+ <h1>Urutu</h1>
  
  <h2> A inspiração </h2>
   
@@ -14,7 +15,7 @@
 	
 	<p> Apesar de "O Abapuru" ser mais conhecido para representar o movimento da Antropofagia, a obra escolhida também apresenta uma luta entre deglutição e vida, onde não se sabe quem saiu vencedor.</p>
 	
-	<img src="https://static.todamateria.com.br/upload/19/28/1928oovourutu.jpg" alt="Urutu" style="display: block;  margin-left: auto; margin-right: auto; width: 35%">
+	<img src="https://static.todamateria.com.br/upload/19/28/1928oovourutu.jpg" alt="Urutu">
 	
 <h2> Os desafios </h2>
 
@@ -152,7 +153,7 @@
 
 <path id="cobra_lateral" d="M 405,550 Q 370,450 530,400 L 550,370  Q 370,370 347,450 L400,560" style="fill:#59122C" />
 
-<path id="cobra_lateral_ovo_azul" d="M 347,450 L 450,350 L 370,360 L343,450 " style="fill:#0A3255"">
+<path id="cobra_lateral_ovo_azul" d="M 347,450 L 450,350 L 370,360 L343,450 " style="fill:#0A3255">
 	<animate
 		attributeName="fill"
 		begin="sol.begin" 
